server: tweaks to openapi schema
